syntax = "proto3";

package hashicorp.consul.auth.v1alpha1;

import "pbauth/v1alpha1/traffic_permissions.proto";

message ComputedTrafficPermissions {
  repeated Permission allow_permissions = 1;
  repeated Permission deny_permissions = 2;
}
